simplified bash script